# LoRa-Bridge-Test

./: .gitignore  README.md  ca.json  cert.json  docker-compose.yaml  docker-compose.yml  example-mqtt-uplink-message.json  global_conf.json  payload-codec.js
config/stack/: ttn-lw-stack-docker.yml
lora_usb/: Cargo.toml
lora_usb/src/: main.rs  uplink_message.rs
nodered/: flows.json  flows_cred.json  package-lock.json  package.json
serial-node/: flows.json  lower-case.html  package.json
